dist/cdb/templates/front-deployment.yaml
---
# Source: cdb/templates/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  labels:
    app: front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      imagePullSecrets:
        - name: auth-master3-registry
      containers:
      - name: front
        image: master3.takima.io:4567/master3/kubernetes-resources/front:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "100Mi"
            cpu: "0.1"
          limits:
            memory: "300Mi"
            cpu: "0.5"
