dist/cdb/templates/front-service.yaml
---
# Source: cdb/templates/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
