dist/cdb/templates/front-ingress.yaml
---
# Source: cdb/templates/front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: front
spec:
  rules:
  - host: www.to-replace.takima.cloud
    http:
      paths:
      - backend:
          service:
            name: front
            port:
              number: 80
        path: /
        pathType: Prefix
